samples/_failures_safe/1761529052_264f3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b44e736.c: In function ‘main’:
./samples/SAFE/__tmp_1b44e736.c:145:10: error: ‘perform_de’ undeclared (first use in this function)
  145 |     if (!perform_de
      |          ^~~~~~~~~~
./samples/SAFE/__tmp_1b44e736.c:145:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1b44e736.c:145:20: error: expected ‘)’ at end of input
  145 |     if (!perform_de
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_1b44e736.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!perform_de
      |     ^~
